# elo-system

./: .gitignore  CMakeLists.txt  main.cpp  readme.txt
data/: players.csv
src/: Match.cpp  Match.h  Player.cpp  Player.h  RankingSystem.cpp  RankingSystem.h  main.cpp
tests/: MatchTest.cpp  PlayerTest.cpp  RankingSystemTest.cpp
